making vrt in added santa_monica_tiler. added filters.range on HeightAboveGround

--- a/Allometry/la_sunset_allo.ipynb
+++ b/Allometry/la_sunset_allo.ipynb
@@ -1127,6 +1127,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import rasterio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mDocstring:\u001b[0m\n",
+       "Read a dataset's raw pixels as an N-d array\n",
+       "\n",
+       "This data is read from the dataset's band cache, which means\n",
+       "that repeated reads of the same windows may avoid I/O.\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "indexes : list of ints or a single int, optional\n",
+       "    If `indexes` is a list, the result is a 3D array, but is\n",
+       "    a 2D array if it is a band index number.\n",
+       "\n",
+       "out : numpy ndarray, optional\n",
+       "    As with Numpy ufuncs, this is an optional reference to an\n",
+       "    output array into which data will be placed. If the height\n",
+       "    and width of `out` differ from that of the specified\n",
+       "    window (see below), the raster image will be decimated or\n",
+       "    replicated using the specified resampling method (also see\n",
+       "    below).\n",
+       "\n",
+       "    *Note*: the method's return value may be a view on this\n",
+       "    array. In other words, `out` is likely to be an\n",
+       "    incomplete representation of the method's results.\n",
+       "\n",
+       "    This parameter cannot be combined with `out_shape`.\n",
+       "\n",
+       "out_dtype : str or numpy dtype\n",
+       "    The desired output data type. For example: 'uint8' or\n",
+       "    rasterio.uint16.\n",
+       "\n",
+       "out_shape : tuple, optional\n",
+       "    A tuple describing the shape of a new output array. See\n",
+       "    `out` (above) for notes on image decimation and\n",
+       "    replication.\n",
+       "\n",
+       "    Cannot combined with `out`.\n",
+       "\n",
+       "window : a pair (tuple) of pairs of ints or Window, optional\n",
+       "    The optional `window` argument is a 2 item tuple. The first\n",
+       "    item is a tuple containing the indexes of the rows at which\n",
+       "    the window starts and stops and the second is a tuple\n",
+       "    containing the indexes of the columns at which the window\n",
+       "    starts and stops. For example, ((0, 2), (0, 2)) defines\n",
+       "    a 2x2 window at the upper left of the raster dataset.\n",
+       "\n",
+       "masked : bool, optional\n",
+       "    If `masked` is `True` the return value will be a masked\n",
+       "    array. Otherwise (the default) the return value will be a\n",
+       "    regular array. Masks will be exactly the inverse of the\n",
+       "    GDAL RFC 15 conforming arrays returned by read_masks().\n",
+       "\n",
+       "boundless : bool, optional (default `False`)\n",
+       "    If `True`, windows that extend beyond the dataset's extent\n",
+       "    are permitted and partially or completely filled arrays will\n",
+       "    be returned as appropriate.\n",
+       "\n",
+       "resampling : Resampling\n",
+       "    By default, pixel values are read raw or interpolated using\n",
+       "    a nearest neighbor algorithm from the band cache. Other\n",
+       "    resampling algorithms may be specified. Resampled pixels\n",
+       "    are not cached.\n",
+       "\n",
+       "fill_value : scalar\n",
+       "    Fill value applied in the `boundless=True` case only. Like\n",
+       "    the fill_value of numpy.ma.MaskedArray, should be value\n",
+       "    valid for the dataset's data type.\n",
+       "\n",
+       "Returns\n",
+       "-------\n",
+       "Numpy ndarray or a view on a Numpy ndarray\n",
+       "\n",
+       "Note: as with Numpy ufuncs, an object is returned even if you\n",
+       "use the optional `out` argument and the return value shall be\n",
+       "preferentially used by callers.\n",
+       "\u001b[0;31mType:\u001b[0m      method_descriptor\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "?rasterio.DatasetReader.read"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
