--- a/Lidar/santa_monica_tile.ipynb
+++ b/Lidar/santa_monica_tile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -11,14 +11,22 @@
        "16"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import multiprocessing\n",
-    "multiprocessing.cpu_count()"
+    "ncores = multiprocessing.cpu_count()\n",
+    "ncores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PDAL all of a sudden wants nupmy <= 1.20.0, you may need to conda update it"
    ]
   },
   {
@@ -63,19 +71,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_pipe(bbox, chm_path, srs='EPSG:3857'):\n",
+    "def make_pipe(bbox, chm_path, srs='EPSG:3857', threads=4, resolution=1):\n",
     "    '''Creates, validates and then returns the pdal pipeline\n",
     "    \n",
     "    Arguments:\n",
-    "    bbox     -- Bounding box in srs coordintes (default srs is EPSG:3857),\n",
-    "                in the form: ([xmin, xmax], [ymin, ymax]).\n",
-    "    chm_path -- String - Path where the CHM shall be saved. Must include .tif exstension.\n",
-    "    srs      -- String - EPSG identifier for srs  being used. Defaults to EPSG:3857\n",
-    "                because that is what ept files tend to use.\n",
+    "    bbox       -- Tuple - Bounding box in srs coordintes (default srs is EPSG:3857),\n",
+    "                  in the form: ([xmin, xmax], [ymin, ymax]).\n",
+    "    chm_path   -- String - Path where the CHM shall be saved. Must include .tif exstension.\n",
+    "    srs        -- String - EPSG identifier for srs  being used. Defaults to EPSG:3857\n",
+    "                  because that is what ept files tend to use.\n",
+    "    threads    -- Int - Number os threads to be used by the reader.ept. Defaults to 4.\n",
+    "    resolution -- Int or Float - resolution (m) used by writers.gdal\n",
     "    '''\n",
     "    \n",
     "    t = Template('''\n",
@@ -86,7 +96,8 @@
     "            \"filename\": \"https://s3-us-west-2.amazonaws.com/usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json\",\n",
     "            \"type\": \"readers.ept\",\n",
     "            \"tag\": \"readdata\",\n",
-    "            \"spatialreference\":\"${srs}\"\n",
+    "            \"spatialreference\": \"${srs}\",\n",
+    "            \"threads\": \"${threads}\"\n",
     "            },\n",
     "            {\n",
     "            \"type\":\"filters.outlier\",\n",
@@ -130,7 +141,7 @@
     "        ]\n",
     "    }''')\n",
     "\n",
-    "    pipe = t.substitute(scaled_bbox=bbox, srs=srs, chm_path=chm_path)\n",
+    "    pipe = t.substitute(scaled_bbox=bbox, srs=srs, chm_path=chm_path, threads=threads)\n",
     "    pipeline = pdal.Pipeline(pipe)\n",
     "    if pipeline.validate():\n",
     "        return(pipeline)\n",
@@ -144,10 +155,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# bbox of Santa Monica\n",
     "xmin = -118.51765140181836\n",
     "ymin = 33.995146776023624\n",
     "xmax = -118.44351271585195\n",
     "ymax = 34.050617079693275\n",
+    "\n",
     "\n",
     "# define transform from EPSG:4326 to EPSG:3857\n",
     "old_crs = osr.SpatialReference() \n",
@@ -333,6 +346,39 @@
    ],
    "source": [
     "np.quantile(arr, 0.999)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try the whole bbox ##\n",
+    "\n",
+    "Here we will try the entire Santa Monica bbox at once.  Also I will try 0.5m resolution for the output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# bbox of Santa Monica\n",
+    "xmin = -118.51765140181836\n",
+    "ymin = 33.995146776023624\n",
+    "xmax = -118.44351271585195\n",
+    "ymax = 34.050617079693275\n",
+    "sm_bbox = ([xmin, xmax], [ymin, ymax])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = make_pipe(sm_bbox, f'{tmp}/full_SM_chm.tif', srs='EPSG:3857', threads=ncores, resolution=0.5)\n",
+    "count = pipeline.execute()"
    ]
   },
   {
