--- a/NAIP/santa_monica_ndvi.ipynb
+++ b/NAIP/santa_monica_ndvi.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = '/home/jovyan/NAIP'\n",
+    "filepath = '/home/jovyan/UrbanForest'\n",
     "infile = os.path.join(filepath, 'ortho_1-1_hn_s_ca037_2016_1.tif')\n",
     "outfile = os.path.join(filepath, 'ortho_1-1_hn_s_ca037_2016_1_ndvi.tif')"
    ]
