working on ndvi

--- a/NAIP/santa_monica_ndvi.ipynb
+++ b/NAIP/santa_monica_ndvi.ipynb
@@ -20,6 +20,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2016 NAIP ###"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -124,26 +131,6 @@
     "              scale=False,\n",
     "              vmin=-1, vmax=1,\n",
     "              title='GLI 2016, Santa Monica, CA')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "nan"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "2/np.NaN"
    ]
   },
   {
