--- a/Lidar/santa_monica_tile.ipynb
+++ b/Lidar/santa_monica_tile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "16"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "'1.20.0'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,23 +227,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[                                        ] | 0% Completed |  0.7sThis happened All points collinear on the bbox ([-13190023.371757178, -13189198.06368019], [4034110.627024999, 4034855.65848512])\n",
-      "This happened All points collinear on the bbox ([-13192499.295988139, -13191673.987911152], [4034110.627024999, 4034855.65848512])\n",
-      "[#                                       ] | 3% Completed |  7min  1.0sThis happened writers.gdal: Grid width or height is too large. Width and height are limited to 2147483647 cells.Try setting bounds or increasing resolution. on the bbox ([-13192499.295988139, -13191673.987911152], [4028150.3753440287, 4028895.40680415])\n",
-      "[###############                         ] | 38% Completed | 58min 34.9sThis happened writers.gdal: Grid width or height is too large. Width and height are limited to 2147483647 cells.Try setting bounds or increasing resolution. on the bbox ([-13193324.604065126, -13192499.295988139], [4028895.40680415, 4029640.4382642712])\n",
-      "[################                        ] | 41% Completed |  1hr  1min 46.7sThis happened All points collinear on the bbox ([-13191673.987911152, -13190848.679834165], [4034110.627024999, 4034855.65848512])\n",
-      "[##################                      ] | 45% Completed |  1hr  7min  1.0sThis happened writers.gdal: Grid width or height is too large. Width and height are limited to 2147483647 cells.Try setting bounds or increasing resolution. on the bbox ([-13193324.604065126, -13192499.295988139], [4028150.3753440287, 4028895.40680415])\n",
-      "[######################                  ] | 56% Completed |  1hr 25min 31.0sThis happened All points collinear on the bbox ([-13190848.679834165, -13190023.371757178], [4031130.501184514, 4031875.532644635])\n",
-      "[########################                ] | 61% Completed |  1hr 30min 52.9sThis happened All points collinear on the bbox ([-13193324.604065126, -13192499.295988139], [4034855.65848512, 4035600.6899452414])\n",
-      "[############################            ] | 70% Completed |  1hr 44min 29.6sThis happened All points collinear on the bbox ([-13190848.679834165, -13190023.371757178], [4034855.65848512, 4035600.6899452414])\n",
-      "[########################################] | 100% Completed |  2hr 26min 24.1s\n"
+      "[                                        ] | 0% Completed |  0.0s"
      ]
     }
    ],
@@ -251,7 +242,7 @@
     "@delayed\n",
     "def tilez(i, bbox):\n",
     "    chm_path = f'{tmp}/chm{i}.tif'\n",
-    "    pipeline = make_pipe(bbox, chm_path)\n",
+    "    pipeline = make_pipe(bbox, chm_path, resolution=0.5)\n",
     "    try:\n",
     "        count = pipeline.execute()\n",
     "    except RuntimeError as e:\n",
