santa_monica_ndvi.ipynb working

--- a/NAIP/santa_monica_ndvi.ipynb
+++ b/NAIP/santa_monica_ndvi.ipynb
@@ -288,25 +288,70 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "masked = f'{fileapth}/santa_monica_mosaic_35mlimit_originwarp_NDVI_thresh25_masked.tiff'\n",
-    "chm_path = f'{filepath}/santa_monica_mosaic_35mlimit_originwarp.tiff'\n",
-    "\n",
-    "with rio.open(mask_file, 'r') as mask:\n",
-    "    with rio.open(chm_path, 'r') as src:\n",
-    "        print(type(mask.read() * cropped_image.read()))"
+    "I cropped the mask in qgis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import subprocess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args='gdalwarp -cutline /home/jovyan/tmp/clipper.shp -crop_to_cutline /home/jovyan/tmp/alligned_mask.tif /home/jovyan/tmp/cropped_mask.tif', returncode=1, stdout=b'', stderr=b'ERROR 1: Output dataset /home/jovyan/tmp/cropped_mask.tif exists,\\nbut some command line options were provided indicating a new dataset\\nshould be created.  Please delete existing dataset and run again.\\n\\n')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp = '/home/jovyan/tmp'\n",
+    "os.makedirs(tmp, exist_ok=True)\n",
+    "\n",
+    "chm_path = f'{filepath}/santa_monica_mosaic_35mlimit_originwarp.tiff'\n",
+    "alligned_mask = f'{tmp}/alligned_mask.tif'\n",
+    "cropped_mask = f'{tmp}/cropped_mask.tif'\n",
+    "\n",
+    "cmd = f'gdaltindex {tmp}clipper.shp {chm_path}'\n",
+    "subprocess.run(cmd, shell=True, capture_output=True)\n",
+    "\n",
+    "cmd = f'gdalwarp -tr 1 1 -tap {mask_file} {alligned_mask}'\n",
+    "subprocess.run(cmd, shell=True, capture_output=True)\n",
+    "\n",
+    "cmd = f'gdalwarp -cutline {tmp}/clipper.shp -crop_to_cutline {alligned_mask} {cropped_mask}'\n",
+    "subprocess.run(cmd, shell=True, capture_output=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masked = 'santa_monica_mosaic_35mlimit_originwarp_NDVI_thresh25_masked.tiff'\n",
+    "\n",
+    "with rio.open(cropped_mask, 'r') as mask:\n",
+    "    with rio.open(chm_path, 'r') as src:\n",
+    "        masked_arr = mask.read() * src.read()\n",
+    "        profile = src.profile\n",
+    "        with rio.open(masked, 'w', **profile) as dst:\n",
+    "            dst.write(masked_arr) "
+   ]
   }
  ],
  "metadata": {
