raster downlaod and clipping working in Hollywood_PointCloud,ipynb

--- a/Lidar/Hollywood_PointCloud.ipynb
+++ b/Lidar/Hollywood_PointCloud.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "8"
+       "16"
       ]
      },
      "execution_count": 1,
@@ -26,21 +26,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "!pip install pdal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "PDAL all of a sudden wants nupmy <= 1.20.0, you may need to conda update it"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1.20.0'"
+       "'1.20.1'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,19 +68,169 @@
     "from string import Template\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import h5py"
+    "import h5py\n",
+    "import json\n",
+    "import requests\n",
+    "import os\n",
+    "import subprocess"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the pipeline below we select 35m as the limit on ```HeightAboveGround``` because it is a reasonable value and it is the 0.999 quantile on a tif made with no limit."
+    "Now make the bbox, transform it to EPSG:3857, and divide it into tiles for use with the ept reader.  We will also make a GEOjson of the bbox in EPSG:4326 for use later."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# bbox of Hollywood\n",
+    "xmin_ = -118.368793\n",
+    "ymin_ = 34.076306\n",
+    "xmax_ = -118.3284614 \n",
+    "ymax_ = 34.111215\n",
+    "\n",
+    "\n",
+    "# make a geojson, see below   \n",
+    "gjson = {'coordinates' : [[[xmin_, ymin_], [xmin_, ymax_], [xmax_, ymax_], [xmax_, ymin_]]],\n",
+    "         'type' : 'Polygon'}\n",
+    "with open('hollywood_box.json', 'w') as of:\n",
+    "    json.dump(gjson, of)\n",
+    "\n",
+    "\n",
+    "# define transform from EPSG:4326 to EPSG:3857\n",
+    "old_crs = osr.SpatialReference() \n",
+    "old_crs.ImportFromEPSG(4326) \n",
+    "new_crs = osr.SpatialReference() \n",
+    "new_crs.ImportFromEPSG(3857)\n",
+    "transform = osr.CoordinateTransformation(old_crs,new_crs)\n",
+    "\n",
+    "# define transform from EPSG:4326 to EPSG:26911\n",
+    "new_crs_26911 = osr.SpatialReference() \n",
+    "new_crs_26911.ImportFromEPSG(26911)\n",
+    "transform_26911 = osr.CoordinateTransformation(old_crs,new_crs_26911)\n",
+    "\n",
+    "# transform bbox points for the ept reader\n",
+    "xmin, ymin, zmin = transform.TransformPoint(ymin_, xmin_)\n",
+    "xmax, ymax, zmax = transform.TransformPoint(ymax_, xmax_)\n",
+    "\n",
+    "# transform bbox points for clipping the raster\n",
+    "xmin_26911, ymin_26911, zmin_26911 = transform_26911.TransformPoint(ymin_, xmin_)\n",
+    "xmax_26911, ymax_26911, zmax_26911 = transform_26911.TransformPoint(ymax_, xmax_)\n",
+    "\n",
+    "\n",
+    "#make tiles for ept reader (EPSG:3857)\n",
+    "n = 10\n",
+    "dx = abs(xmin - xmax) / n\n",
+    "dy = abs(ymin - ymax) / n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the above cell we created a GEOjson ```holywood_box.json```.  I downloaded it and compared it to the tiles shapefile for the NAIP data in order to find the url for the tile we need. Now we can download the tile that we need. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# paths, urls \n",
+    "tmp = '/home/jovyan/tmp'\n",
+    "url = 'https://coast.noaa.gov/htdata/raster5/imagery/CA_NAIP_2018_9159/m_3411862_nw_11_060_20180723.tif'\n",
+    "fname = os.path.join(tmp, 'm_3411862_nw_11_060_20180723.tif')\n",
+    "\n",
+    "# make sure tmp exists\n",
+    "os.makedirs(tmp, exist_ok=True)\n",
+    "\n",
+    "# download the tif\n",
+    "response = requests.get(url)\n",
+    "with open(fname, 'wb') as sink:\n",
+    "            sink.write(response.content)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we clip the raster to the bbox of Hollywood using EPSG:26911 coordinates."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make outfile path\n",
+    "clipped_fname = os.path.join(tmp, 'hollywood.tif')\n",
+    "\n",
+    "# make the args list\n",
+    "cmd = f'gdalwarp -te {xmin_26911} {ymin_26911} {xmax_26911} {ymax_26911} {fname} {clipped_fname}'\n",
+    "\n",
+    "# call the command\n",
+    "result = subprocess.run(cmd, shell=True, capture_output=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I downloaded ```hollywood.tif``` and viewd it in QGIS to make sure it is correct. It is.\n",
+    "\n",
+    "Now we will calculate NDVI from ```hollywood.tif```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'driver': 'GTiff', 'dtype': 'uint8', 'nodata': None, 'width': 6287, 'height': 6370, 'count': 4, 'crs': CRS.from_epsg(26911), 'transform': Affine(0.5999539188936744, 0.0, 373703.5645468485,\n",
+       "       0.0, -0.599999882105235, 3775284.05104048), 'tiled': False, 'interleave': 'pixel'}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import rasterio as rio\n",
+    "\n",
+    "with rio.open(clipped_fname, 'r') as src:\n",
+    "    profile = src.profile\n",
+    "    data = src.read()\n",
+    "profile"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the pipeline below:\n",
+    ">we read the ept  \n",
+    ">we filter outliers  \n",
+    ">we reproject to UTM 11  \n",
+    ">we classify ground points  \n",
+    ">we find haieght above ground  \n",
+    ">we select 35m as the limit on ```HeightAboveGround``` because it is a reasonable value and it is the 0.999 quantile on a tif made with no limit  \n",
+    "> we us ```filters.coloration``` to mask the points as vegetation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,10 +265,6 @@
     "            \"min_k\":4\n",
     "            },\n",
     "            {\n",
-    "            \"type\":\"filters.range\",\n",
-    "            \"limits\":\"returnnumber[1:1]\"\n",
-    "            },\n",
-    "            {\n",
     "            \"type\": \"filters.reprojection\",\n",
     "            \"in_srs\":\"${srs}\",\n",
     "            \"out_srs\": \"EPSG:26911\"\n",
@@ -144,38 +297,6 @@
     "        return(pipeline)\n",
     "    else:\n",
     "        raise Exception('Bad pipeline (sorry to be so ambigous)!')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# bbox of Hollywood\n",
-    "xmin = -118.368793\n",
-    "ymin = 34.076306\n",
-    "xmax = -118.3284614\n",
-    "ymax = 34.111215\n",
-    "\n",
-    "\n",
-    "# define transform from EPSG:4326 to EPSG:3857\n",
-    "old_crs = osr.SpatialReference() \n",
-    "old_crs.ImportFromEPSG(4326) \n",
-    "new_crs = osr.SpatialReference() \n",
-    "new_crs.ImportFromEPSG(3857)\n",
-    "transform = osr.CoordinateTransformation(old_crs,new_crs)\n",
-    "\n",
-    "# transform bbox points\n",
-    "xmin, ymin, zmin = transform.TransformPoint(ymin, xmin)\n",
-    "xmax, ymax, zmax = transform.TransformPoint(ymax, xmax)\n",
-    "\n",
-    "#make tiles\n",
-    "n = 10\n",
-    "dx = abs(xmin - xmax) / n\n",
-    "dy = abs(ymin - ymax) / n\n",
-    "\n",
-    "\n"
    ]
   },
   {
@@ -1373,7 +1494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
