just wrote santa_monica_mosaic_60cm_v0.tiff, about to make changes to the pipeline

--- a/Lidar/Hollywood_PointCloud-Copy1.ipynb
+++ b/Lidar/Hollywood_PointCloud-Copy1.ipynb
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1093,304 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [05:27, 327.05s/it]"
+      "1it [11:18, 678.50s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing tranche 1 of 10\n",
+      "    building Dask graph...\n",
+      "    computing...\n",
+      "[                                        ] | 0% Completed |  0.3s"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[########################################] | 100% Completed | 11min 13.3s\n",
+      "    reclassifying points...\n",
+      "    sending to bigQuery...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1it [12:31, 751.58s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing tranche 2 of 10\n",
+      "    building Dask graph...\n",
+      "    computing...\n",
+      "[                                        ] | 0% Completed |  0.0s"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[########################################] | 100% Completed | 11min 15.3s\n",
+      "    reclassifying points...\n",
+      "    sending to bigQuery...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1it [12:20, 740.29s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing tranche 3 of 10\n",
+      "    building Dask graph...\n",
+      "    computing...\n",
+      "[                                        ] | 0% Completed |  0.0s"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[########################################] | 100% Completed | 10min  6.8s\n",
+      "    reclassifying points...\n",
+      "    sending to bigQuery...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1it [11:17, 677.93s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing tranche 4 of 10\n",
+      "    building Dask graph...\n",
+      "    computing...\n",
+      "[                                        ] | 0% Completed |  0.0s"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[########################################] | 100% Completed | 12min  0.7s\n",
+      "    reclassifying points...\n",
+      "    sending to bigQuery...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1it [12:47, 767.25s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing tranche 5 of 10\n",
+      "    building Dask graph...\n",
+      "    computing...\n",
+      "[                                        ] | 0% Completed |  0.0s"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[########################################] | 100% Completed |  9min 49.3s\n",
+      "    reclassifying points...\n",
+      "    sending to bigQuery...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1it [12:31, 751.43s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing tranche 6 of 10\n",
+      "    building Dask graph...\n",
+      "    computing...\n",
+      "[                                        ] | 0% Completed |  0.0s"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[########################################] | 100% Completed | 12min 36.2s\n",
+      "    reclassifying points...\n",
+      "    sending to bigQuery...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1it [12:48, 768.16s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing tranche 7 of 10\n",
+      "    building Dask graph...\n",
+      "    computing...\n",
+      "[                                        ] | 0% Completed |  0.3s"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[########################################] | 100% Completed |  7min 41.9s\n",
+      "    reclassifying points...\n",
+      "    sending to bigQuery...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1it [08:30, 510.52s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing tranche 8 of 10\n",
+      "    building Dask graph...\n",
+      "    computing...\n",
+      "[                                        ] | 0% Completed |  0.2s"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[########################################] | 100% Completed | 12min 19.1s\n",
+      "    reclassifying points...\n",
+      "    sending to bigQuery...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1it [13:20, 800.53s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing tranche 9 of 10\n",
+      "    building Dask graph...\n",
+      "    computing...\n",
+      "[                                        ] | 0% Completed |  0.0s"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[########################################] | 100% Completed |  8min 14.5s\n",
+      "    reclassifying points...\n",
+      "    sending to bigQuery...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1it [09:21, 561.43s/it]\n"
      ]
     }
    ],
@@ -1136,6 +1433,41 @@
     "    out = sendToBigQuery(S, tableName='urbanforest.USGS_PointCloud', projectID='urban-forest-269703')\n",
     "    if not out: print('Upload to big query failed!')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
