in santa_monica_tile changed pipeline from filters.hag_delauny to filters.hag_nn, also set allow extrapolation to true

--- a/Lidar/santa_monica_tile.ipynb
+++ b/Lidar/santa_monica_tile.ipynb
@@ -122,7 +122,8 @@
     "            \"window\":16.0\n",
     "            },\n",
     "            {\n",
-    "            \"type\":\"filters.hag_delaunay\"\n",
+    "            \"type\":\"filters.hag_nn\",\n",
+    "            \"allow_extrapolation\":\"true\"\n",
     "            },\n",
     "            {\n",
     "            \"type\":\"filters.range\",\n",
