in santa_monica_tile changed pipeline from filters.hag_delauny to filters.hag_nn, also set allow extrapolation to true

--- a/Lidar/santa_monica_tile.ipynb
+++ b/Lidar/santa_monica_tile.ipynb
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_pipe(bbox, chm_path, srs='EPSG:3857', threads=4, resolution=1):\n",
+    "def make_pipe(ept_bbox, out_bbox, chm_path, srs='EPSG:3857', threads=4, resolution=1):\n",
     "    '''Creates, validates and then returns the pdal pipeline\n",
     "    \n",
     "    Arguments:\n",
@@ -133,6 +133,7 @@
     "            \"filename\": \"${chm_path}\",\n",
     "            \"gdalopts\": \"tiled=yes,     compress=deflate\",\n",
     "            \"nodata\": -9999,\n",
+    "            \"bounds\": \"${out_bbox}\",\n",
     "            \"output_type\": \"idw\",\n",
     "            \"resolution\": 0.6,\n",
     "            \"type\": \"writers.gdal\",\n",
@@ -142,7 +143,7 @@
     "        ]\n",
     "    }''')\n",
     "\n",
-    "    pipe = t.substitute(scaled_bbox=bbox, srs=srs, chm_path=chm_path, threads=threads)\n",
+    "    pipe = t.substitute(scaled_bbox=ept_bbox, out_bbox=out_bbox, srs=srs, chm_path=chm_path, threads=threads)\n",
     "    pipeline = pdal.Pipeline(pipe)\n",
     "    if pipeline.validate():\n",
     "        return(pipeline)\n",
@@ -181,6 +182,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the function below we make tiles out of the overall bounds.  We make the in EPSG:3857 for the ept reader and in EPSG 26911 for the tif writer."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -188,7 +196,8 @@
    "source": [
     "def make_tile_bounds(bounds, n):\n",
     "    '''Divides bounds into n x n grid of tiles.\n",
-    "    Returns a list of the tile boundaries.\n",
+    "    Returns a len=2 tuple with 2 lists of the tile boundaries.\n",
+    "    list 0 is in EPSG:3857 and list 1 is in EPSG:26911\n",
     "    bounds given in pdl style: ([xmin, xmax], [ymin, ymax])'''\n",
     "    # calulate x and y strides of tiles\n",
     "    dx = abs(xmin - xmax) / n\n",
@@ -219,7 +228,23 @@
     "            bbox = (x, y)\n",
     "            bxs.append(bbox)\n",
     "\n",
-    "    return(bxs)"
+    "    # define transform from EPSG:3857 to EPSG:26911\n",
+    "    old_crs = osr.SpatialReference() \n",
+    "    old_crs.ImportFromEPSG(3857) \n",
+    "    new_crs = osr.SpatialReference() \n",
+    "    new_crs.ImportFromEPSG(26911)\n",
+    "    transform = osr.CoordinateTransformation(old_crs,new_crs)\n",
+    "    \n",
+    "    # make 26911 bboxes\n",
+    "    bxs_26911 = []\n",
+    "    for bx in bxs:\n",
+    "        x_, x = bx[0][0], bx[0][1]\n",
+    "        y_, y = bx[1][0], bx[1][1]\n",
+    "        xmin26911, ymin26911, zmin26911 = transform.TransformPoint(y_, x_)\n",
+    "        xmax26911, ymax26911, zmax26911 = transform.TransformPoint(y, x)\n",
+    "        box = ([xmin26911, xmax26911],[ymin26911, ymax26911])\n",
+    "        bxs_26911.append(box)\n",
+    "    return((bxs, bxs_26911))"
    ]
   },
   {
@@ -244,23 +269,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[##########################              ] | 65% Completed |  1hr 25min 49.5sThis happened --writers.gdal: Grid width or height is too large. Width and height are limited to 2147483647 cells.Try setting bounds or increasing resolution.-- on the bbox ([-13192499.295988139, -13191673.987911152], [4028150.3753440287, 4028895.40680415])\n",
-      "[########################################] | 100% Completed |  2hr  8min 49.9s\n"
+      "[                                        ] | 0% Completed |  0.3s"
      ]
     }
    ],
    "source": [
     "@delayed\n",
-    "def tilez(i, bbox):\n",
+    "def tilez(i, bbox, out_bbox):\n",
     "    chm_path = f'{tmp}/chm{i}.tif'\n",
-    "    pipeline = make_pipe(bbox, chm_path, resolution=0.5)\n",
+    "    pipeline = make_pipe(bbox, out_bbox, chm_path, resolution=0.5)\n",
     "    try:\n",
     "        count = pipeline.execute()\n",
     "    except RuntimeError as e:\n",
@@ -275,8 +299,8 @@
     "tmp = f'{home}/tmp'\n",
     "    \n",
     "results = []\n",
-    "for i, bbox in enumerate(bxs):\n",
-    "    results.append(tilez(i, bbox))\n",
+    "for i, bboxs in enumerate(bxs):\n",
+    "    results.append(tilez(i, bboxs[0], bboxs[1]))\n",
     "\n",
     "with ProgressBar():\n",
     "    computed_results = compute(*results)"
@@ -290,12 +314,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import subprocess"
+    "## import subprocess"
    ]
   },
   {
